# camera-server

./: .env  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml  rust-toolchain
migrations/2021-01-11-194703_users/: up.sql
migrations/2021-01-14-152516_user_tokens/: down.sql  up.sql
migrations/2021-01-18-171805_cameras/: down.sql  up.sql
migrations/2021-01-18-174808_users_cameras/: down.sql  up.sql
migrations/2021-01-19-125750_camera_tokens/: down.sql  up.sql
migrations/2021-04-24-163139_config/: up.sql
src/: api_error.rs  camera.rs  camera_tokens.rs  config.rs  main.rs  schema.rs  user.rs  user_tokens.rs  users_cameras.rs
src/enums/: token_error.rs
