[package]
name = "camera-server"
version = "0.1.0"
authors = ["UnicornsOnLSD <jmsharvey771@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
diesel = { version = "1.4.5", features = ["postgres", "uuid"] }
uuid = {version = "0.6", features = ["v4", "serde"]}
serde = {version = "1.0.119", features = ["derive"]}

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["diesel_postgres_pool", "json"]